alignment fix

--- a/style.css
+++ b/style.css
@@ -357,11 +357,21 @@ body {
   }
   .product-infos {
     width: 100%;
-    flex-direction: column;
     align-items: center;
     gap: 2rem;
     flex-direction: row;
     justify-content:  start;
 
   }
+}
+
+
+
+.product{
+  border: 1px solid;
+}
+
+.product-specs{
+  border: 1px solid;
+
 }
